--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script src="scripts/date.js" defer></script>
     <script src="scripts/navigation.js" defer></script>
     <script src="scripts/main.js" defer></script>
+    <link rel="icon" href="favicon.ico">
     
 </head>
 <body>
