--- a/index.html
+++ b/index.html
@@ -18,6 +18,20 @@
     <script src="scripts/navigation.js" defer></script>
     <script src="scripts/main.js" defer></script>
     <link rel="icon" href="favicon.ico">
+
+    <meta property="og:title" content="Adão Klepa Junior - Home - WDD2311">
+    <meta property="og:description" content="Welcome! This is the place where I make some mistakes until I do the right thing!">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://adaoklepajunior.github.io/wdd231">
+    <meta property="og:image" content="https://adaoklepajunior.github.io/wdd231/images/profile.jpg">
+    <meta property="og:site_name" content="Adão Klepa Junior - WDD231">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Adão Klepa Junior - Home - WDD231">
+    <meta name="twitter:description" content="Welcome! This is the place where I make some mistakes until I do the right thing!">
+    <meta name="twitter:image" content="https://adaoklepajunior.github.io/wdd231/images/profile.jpg">
+    <meta name="twitter:site" content="@Klepa_mor">
+    <meta name="twitter:creator" content="@Klepa_mor">
     
 </head>
 <body>
