insert coment about fb:app_id

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <script src="scripts/main.js" defer></script>
     <link rel="icon" href="favicon.ico">
 
+    <!-- <meta property="fb:app_id" content="1234567890" /> -->
     <meta property="og:title" content="Adão Klepa Junior - Home - WDD231">
     <meta property="og:description" content="Welcome! This is the place where I make some mistakes until I do the right thing!">
     <meta property="og:type" content="website">
