--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -18,9 +18,9 @@
   <link rel="stylesheet" href="styles/base.css">
   <link rel="stylesheet" href="styles/large.css">
   <link rel="stylesheet" href="styles/directory.css">
-  <script src="scripts/lastModified.js" defer></script>
+  <script src="scripts/last_modified.js" defer></script>
   <script src="scripts/directory.js" defer></script>
-  <script src="scripts/hamburguerMenu.js" defer></script>
+  <script src="scripts/hamburguer_menu.js" defer></script>
 </head>
 <body>
   <header>
