--- a/chamber/index.html
+++ b/chamber/index.html
@@ -18,10 +18,10 @@
   <link rel="stylesheet" href="styles/base.css">
   <link rel="stylesheet" href="styles/large.css">
   <link rel="stylesheet" href="styles/index.css">
-  <script src="scripts/lastModified.js" defer></script>
+  <script src="scripts/last_modified.js" defer></script>
   <script src="scripts/directory.js" defer></script>
-  <script src="scripts/hamburguerMenu.js" defer></script>
-  <script src="scripts/currentWeather.js" defer></script>
+  <script src="scripts/hamburguer_menu.js" defer></script>
+  <script src="scripts/current_weather.js" defer></script>
   <script src="scripts/spotlight.js" defer></script>
 </head>
 <body>
@@ -43,7 +43,7 @@
   <main>
     <h1>Welcome to the Miracema Chamber of Commerce</h1>
     <section class="hero">
-      <img src="images/ssHero.jpg" alt="Model Market">
+      <img src="images/ss-hero.jpg" alt="Model Market">
       <div class="hero-content">
         <h2>Join Us!</h2>
         <p><strong>Your business is our priority!</strong></p>
