--- a/chamber/index.html
+++ b/chamber/index.html
@@ -11,7 +11,7 @@
   <meta property="og:url" content="https://adaoklepajunior.github.io/wdd231/chamber/index.html">
   <meta property="og:image" content="https://adaoklepajunior.github.io/wdd231/chamber/images/teste.webp">
 
-  <title>Miracema Chamber of Commerce - Directory</title>
+  <title>Miracema Chamber of Commerce - Home
   <link rel="icon" href="favicon.ico">
   <link rel="stylesheet" href="styles/normalize.css">
   <link rel="stylesheet" href="styles/w02_normalize.css">
@@ -41,7 +41,7 @@
   </nav>
 
   <main>
-    <h1>Welcome to the Miracema Chamber of Commerce</h1>
+    <h1>Welcome to the Miracema Chamber of Commerce Home Page</h1>
     <section class="hero">
       <img src="images/ss-hero.jpg" alt="Model Market">
       <div class="hero-content">
