--- a/chamber/index.html
+++ b/chamber/index.html
@@ -11,7 +11,7 @@
   <meta property="og:url" content="https://adaoklepajunior.github.io/wdd231/chamber/index.html">
   <meta property="og:image" content="https://adaoklepajunior.github.io/wdd231/chamber/images/teste.webp">
 
-  <title>Miracema Chamber of Commerce - Home
+  <title>Miracema Chamber of Commerce - Home</title>
   <link rel="icon" href="favicon.ico">
   <link rel="stylesheet" href="styles/normalize.css">
   <link rel="stylesheet" href="styles/w02_normalize.css">
