home page fixes

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -30,7 +30,8 @@
           <img src="images/teste.webp" alt="Logo">
           <h1>Miracema Chamber of Commerce</h1>
         </div>
-      </header>
+        <button id="hamburgerBtn">&#9776;</button>
+    </header>
   <nav>
     <ul id="primaryNav" class="menuLinks">
       <li class="active"><a href="index.html">Home</a></li>
@@ -43,7 +44,7 @@
   <main>
     <h1>Welcome to the Miracema Chamber of Commerce Home Page</h1>
     <section class="hero">
-      <img src="images/ss-hero.jpg" alt="Model Market">
+      <img src="images/ss-hero.jpg" alt="Ponto de Apoio">
       <div class="hero-content">
         <h2>Join Us!</h2>
         <p><strong>Your business is our priority!</strong></p>
