--- a/chamber/index.html
+++ b/chamber/index.html
@@ -44,7 +44,7 @@
   <main>
     <h1>Welcome to the Miracema Chamber of Commerce Home Page</h1>
     <section class="hero">
-      <img src="images/ss-hero.jpg" alt="Ponto de Apoio">
+      <img src="images/ss-hero.webp" alt="Ponto de Apoio">
       <div class="hero-content">
         <h2>Join Us!</h2>
         <p><strong>Your business is our priority!</strong></p>
