home page fixes

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -23,6 +23,7 @@
   <script src="scripts/hamburguer_menu.js" defer></script>
   <script src="scripts/current_weather.js" defer></script>
   <script src="scripts/spotlight.js" defer></script>
+  <script src="scripts/forecast.js" defer></script>
 </head>
 <body>
     <header>
@@ -72,6 +73,13 @@
         <!-- Weather data -->
       </div>
     </section>
+
+    <div id="weather-forecast">
+      <h3>Weather Forecast</h3>
+      <p id="today"></p>
+      <p id="next-day"></p>
+      <p id="next-day2"></p>
+    </div>
 
     <section class="spotlights">
       <h2>Member Spotlights</h2>
