--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <button id="menu-button">☰</button>
         <ul id="nav-menu">
             <li><a href="index.html">Home</a></li>
-            <li><a href="#">Chamber</a></li>
+            <li><a href="./chamber/index.html">Chamber</a></li>
             <li><a href="#">GitHub Profile</a></li>
             <li><a href="https://www.linkedin.com/in/ad%C3%A3o-klepa-86129929b/">LinkedIn</a></li>
         </ul>
@@ -94,6 +94,8 @@
         <p>&copy; <span id="currentyear"></span> Adão Klepa Junior | Brazil</p>
         <p id="lastModified"></p>
     </footer>
+
+    <dialog id="course-info"></dialog>
     
 </body>
 </html>
