--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="WDD231 Thank you!">
-  <meta name="author" content="Néfi Muniz">
-  <meta property="og:title" content="Join Bahia Chamber of Commerce Directory">
+  <meta name="author" content="Adão Klepa Junior">
+  <meta property="og:title" content="Join Miracema Chamber of Commerce Directory">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://nefimuniz.github.io/wdd231/chamber/thankyou.html">
-  <meta property="og:image" content="https://nefimuniz.github.io/wdd231/chamber/images/teste.jpg">
+  <meta property="og:url" content="https://adaoklepajunior.github.io/wdd231/chamber/thankyou.html">
+  <meta property="og:image" content="https://adaoklepajunior.github.io/wdd231/chamber/images/teste.jpg">
   <title>Miracema Chamber of Commerce - Thank you</title>
   <link rel="icon" href="favicon.ico">
   <link rel="stylesheet" href="styles/normalize.css">
