--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -40,9 +40,9 @@
         <section class="color-palette">
             <h2>Color Palette</h2>
             <div class="color-swatches">
-                <div class="color-swatch primary-cool">Black<br>#000000</div>
-                <div class="color-swatch secondary-cool">Dark cyan - lime green<br>#05b14d</div>
-                <div class="color-swatch accent-warm">Scarlet<br>#ff1900</div>
+                <div class="color-swatch primary-cool"><strong>Black</strong><br><strong>#000000</strong></div>
+                <div class="color-swatch secondary-cool"><strong>Dark cyan - lime green</strong><br><strong>#05b14d</strong></div>
+                <div class="color-swatch accent-warm"><strong>Scarlet</strong><br><strong>#ff1900</strong></div>
             </div>
             
             <h3>Color Usage:</h3>
