--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -41,7 +41,7 @@
             <h2>Color Palette</h2>
             <div class="color-swatches">
                 <div class="color-swatch primary-cool"><strong>Black</strong><br><strong>#000000</strong></div>
-                <div class="color-swatch secondary-cool"><strong>Dark cyan - lime green</strong><br><strong>#05b14d</strong></div>
+                <div class="color-swatch secondary-cool"><strong>Lime green</strong><br><strong>#05b14d</strong></div>
                 <div class="color-swatch accent-warm"><strong>Scarlet</strong><br><strong>#ff1900</strong></div>
             </div>
             
