--- a/project/records.html
+++ b/project/records.html
@@ -9,10 +9,10 @@
     <meta property="og:title" content="Old is Cool Records - Records">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://adaoklepajunior.github.io/wdd231/project/records.html">
-    <meta property="og:image" content="https://adaoklepajunior.github.io/wdd231/project/images/teste.webp">
+    <meta property="og:image" content="https://adaoklepajunior.github.io/wdd231/project/images/ss-hero.webp">
 
     <title>Records - Old is Cool records</title>
-    <link rel="icon" href="images/favicon.ico">
+    <link rel="icon" href="favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;700&family=Inter:wght@300;500;700&display=swap" rel="stylesheet">
