--- a/project/sellers.html
+++ b/project/sellers.html
@@ -9,17 +9,17 @@
     <meta property="og:title" content="Old is Cool Records - Sellers Portal">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://adaoklepajunior.github.io/wdd231/project/sellers.html">
-    <meta property="og:image" content="https://adaoklepajunior.github.io/wdd231/project/images/teste.webp">
+    <meta property="og:image" content="https://adaoklepajunior.github.io/wdd231/project/images/ss-hero.webp">
 
     <title>Sellers - Old is Cool Records</title>
-    <link rel="icon" href="images/favicon.ico">
+    <link rel="icon" href="favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;700&family=Inter:wght@300;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/base2.css">
     <link rel="stylesheet" href="styles/large2.css">
     <script src="scripts/util.js" defer></script>
-    <script type="module" src="scripts/sellers.js" defer></script>
+    <script type="module" src="scripts/seller.js" defer></script>
 </head>
 <body>
     <header>
